[package]
name = "zip_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
async_zip = "0.0.5"
tokio = { version = "1", features = ["macros", "fs", "io-util"] }
actix-multipart = "0.4.0-beta.13"
anyhow = "1.0.53"
bytes = "1.1.0"
sanitize-filename = "0.3.0"
futures = "0.3.19"

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]
